--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <md-toolbar color="primary">
-  <span class="center">BeCompany news</span>
+  <span class="center">Nebula Horsehead</span>
   <span class="pointer-cursor"><md-icon (click)="refreshFeed()">refresh</md-icon></span>
 </md-toolbar>
 
-<app-feed-card *ngFor="let feed of feeds" [feed]="feed" ></app-feed-card>
-<app-spinner *ngIf="!feeds.length"></app-spinner>
+<app-card *ngFor="let item of list" [card]="item" ></app-card>
+<app-spinner *ngIf="!list.length"></app-spinner>
